<resources>
    <string name="app_name">TodoApp</string>
    <string name="action_tasks">Tasks</string>
    <string name="action_new_task">New Task</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="task_list_fragment_label">Task List</string>
    <string name="show_task_fragment_label">Show Task</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="task_name">Name</string>
    <string name="task_value">Value</string>
    <string name="task_date">Date</string>
    <string name="task_time">Time</string>
    <string name="task_status">Status</string>

    <string name="new_task__success">Task has been added!</string>
    <string name="new_task__error">Something gone wrong. We cannot add this task :(</string>
    <string name="update_task__success">Task has been updated!</string>
    <string name="update_task__error">Something gone wrong. We cannot update this task :(</string>


    <string name="changeButton">Change</string>
    <string name="saveButton">Save</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!--    validators     -->
    <string name="task_name_length_validator">Minimum length of task name is %1$d</string>


    <string name="unknown_color">Unknown color, please change it.</string>


    <string name="title_activity_settings">Settings</string>

    <!-- User Preferences -->
    <string name="user">User</string>
    <string name="user_title">Your name</string>

    <!-- Theme Preferences -->
    <string name="theme_title">Theme</string>
    <string name="theme_background_color">Background color</string>

</resources>
